# davos

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  README.md  page_at_err.html  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-tests-colab.yml  ci-tests-jupyter.yml  ci-tests.yml  request-colab-tests.yml  trigger-colab-tests-pr.yml
davos/: __init__.py  __init__.pyi  _davos.py  _davos.pyi  colab.py  colab.pyi  config.py  config.pyi  core.py  core.pyi  davos.py  exceptions.py  exceptions.pyi  jupyter.py  jupyter.pyi  parsers.py  parsers.pyi  python.py  python.pyi
davos/core/: config.py  config.pyi  core.py  core.pyi  exceptions.py  exceptions.pyi  parsers.py  parsers.pyi  project.py  project.pyi  regexps.py  regexps.pyi
davos/implementations/: __init__.py  __init__.pyi  colab.py  colab.pyi  ipython_common.py  ipython_common.pyi  ipython_post7.py  ipython_post7.pyi  ipython_pre7.py  ipython_pre7.pyi  js_functions.py  js_functions.pyi  jupyter.py  jupyter.pyi  python.py  python.pyi
paper/: boneyard.tex  changes.tex  main.bib  main.tex  old.tex  paper.bib  paper.md
paper/admin/: cover_letter.tex  declarationStatement.docx
paper/figs/source/: make_shareable_code_base.ipynb
paper/old/: main-old.bib  main-old.tex
tests/: conftest.py  exec_colab_nb.py  test__environment_and_init.ipynb  test__testing_environment.ipynb  test_config.ipynb  test_core.ipynb  test_davos_colab.ipynb  test_davos_common.ipynb  test_davos_jupyter.ipynb  test_implementations.ipynb  test_ipython_common.ipynb  test_ipython_post7.ipynb  test_ipython_pre7.ipynb  test_parsers.ipynb  test_project.ipynb  test_regexps.ipynb  utils.py
