[metadata]
name = davos
version = 0.0.1
description = "smuggle" a module into the namespace: import the module,
    installing it if it doesn't exist.
long_description = file: README.md
long_description_content_type = text/markdown
author = Paxton Fitzpatrick, Jeremy Manning
author_email = contextualdynamics@gmail.com
url = https://github.com/ContextLab/davos
download_url = https://github.com/ContextLab/davos
license = MIT
license_file = LICENSE
keywords = import install package module automatic davos smuggle pip conda
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Filesystems
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.6
install_requires = packaging
setup_requires = setuptools>=42.0.2
packages = find:
include_package_data = true
zip_safe = false

[options.extras_require]
tests =
    google-colab
    IPython>=7.15;python_version>="3.9"
    IPython>=7.3.0;python_version>="3.8"
    IPython>=5.5.0
    ipykernel>=5.0.0
    mypy>=0.812
    pytest==6.2
    requests
    selenium>=3.141
    typing_extensions;python_version<"3.7"

[options.package_data]
* = py.typed, *.pyi

[bdist_wheel]
# not compatible with Python 2.x
universal = 0

[mypy]
python_version = 3.9
disable_error_code = override
disallow_any_expr = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
show_absolute_path = true
